seem to fix the extra space on right side issue

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -55,6 +55,15 @@
 //    overflow-y: scroll;
 // }
 
+// seems to fix the horizontal extra space issue
+html,
+body {
+   margin: 0;
+   // height: 100%;
+   min-height: 100vh; // changed this
+   overflow-x: hidden;
+}
+
 .card {
    // border: 1px solid rgba(0, 0, 0, 0.125); // Bootstrap default
    border: 2px solid rgba(0, 0, 0, 0.25); //  make more noticable
